--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "tech-challenge-2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^9.9.0",
-    "prettier": "^3.3.3"
-  }
+    "name": "tech-challenge-2",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^9.9.0",
+        "prettier": "^3.3.3"
+    },
+    "dependencies": {
+        "express": "^4.19.2",
+        "mongoose": "^8.5.3"
+    }
 }
