--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
+    "author": "Grupo 01",
     "license": "ISC",
     "devDependencies": {
         "eslint": "^9.9.0",
         "prettier": "^3.3.3"
     },
     "dependencies": {
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "mongoose": "^8.5.3"
     }
