--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "npx tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon index.ts"
+        "dev": "nodemon server.ts"
     },
     "author": "Grupo 01",
     "license": "ISC",
