fix: workdir and volumes were using app instead of src

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     environment:
       - NODE_ENV=production
     volumes:
-      - .:/app
-      - /app/node_modules
+      - .:/src
+      - /src/node_modules
     command: npm run dev
