--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@eslint/js": "9.9.0",
         "@types/cors": "2.8.17",
         "@types/express": "4.17.21",
+        "@types/node": "22.7.4",
         "@typescript-eslint/eslint-plugin": "^8.1.0",
         "@typescript-eslint/parser": "^8.1.0",
         "eslint": "9.9.0",
