--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "build": "npx tsc",
+    "test": "jest",
     "start": "node dist/server.js",
     "dev": "nodemon server.ts",
     "format": "prettier --write \"src/**/*.{js,ts,tsx}\"",
@@ -13,16 +14,24 @@
   "author": "Grupo 01",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "7.25.4",
+    "@babel/preset-typescript": "7.24.7",
     "@eslint/js": "9.9.0",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/jest": "29.5.13",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "babel-jest": "29.7.0",
     "eslint": "9.9.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "globals": "15.9.0",
+    "jest": "29.7.0",
     "prettier": "3.3.3",
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
     "ts-node-dev": "2.0.0",
     "typescript": "5.5.4",
     "typescript-eslint": "8.2.0"
