--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "printWidth": 80,
   "tabWidth": 2,
   "bracketSpacing": true,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
