--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/express": "4.17.21",
     "@types/jest": "29.5.13",
     "@types/supertest": "6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
     "babel-jest": "29.7.0",
     "eslint": "9.9.0",
     "eslint-config-prettier": "9.1.0",
