refactor: update MongoDB health check in CI workflow and fix Docker logs command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         ports:
           - 27017:27017
         options: >-
-          --health-cmd "echo 'db.runCommand({ ping: 1 })' | mongo localhost:27017/test --quiet"
+          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })' --quiet"
           --health-interval 10s
           --health-timeout 10s
           --health-retries 10
@@ -38,7 +38,7 @@ jobs:
       - name: Wait for MongoDB to be ready
         run: |
           for i in {1..30}; do
-            if mongo --eval 'db.runCommand({ ping: 1 })' localhost:27017/test --quiet; then
+            if mongo --eval 'db.runCommand({ ping: 1 })' --quiet; then
               echo "MongoDB is ready"
               exit 0
             fi
@@ -47,6 +47,10 @@ jobs:
           done
           echo "MongoDB did not become ready in time"    
           exit 1
+
+      - name: Print MongoDB logs
+        run: |
+          docker logs $(docker ps -q --filter ancestor=mongo) || true
 
       - name: Run lint
         run: npm run lint
@@ -60,4 +64,4 @@ jobs:
       - name: Start application
         run: npm run start
         env:
-          MONGO_URI: mongodb://localhost:27017/tech-challenge-2
+          MONGO_URI: mongodb://mongo:27017/tech-challenge-2
