--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
         ports:
           - 27017:27017
         options: >-
-          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })' --quiet"
-          --health-interval 10s
-          --health-timeout 10s
-          --health-retries 10
+          --health-cmd "mongo --eval 'db.runCommand(\"ping\").ok'" 
+          --health-interval 10s 
+          --health-timeout 5s 
+          --health-retries 5
 
     steps:
       - name: Checkout code
@@ -35,22 +35,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Wait for MongoDB to be ready
+      - name: Wait for MongoDB
         run: |
-          for i in {1..30}; do
-            if mongo --eval 'db.runCommand({ ping: 1 })' --quiet; then
-              echo "MongoDB is ready"
-              exit 0
-            fi
-            echo "Waiting for MongoDB..."
-            sleep 2
+          until nc -z localhost 27017; do
+            echo "Waiting for MongoDB...";
+            sleep 5;
           done
-          echo "MongoDB did not become ready in time"    
-          exit 1
-
-      - name: Print MongoDB logs
-        run: |
-          docker logs $(docker ps -q --filter ancestor=mongo) || true
 
       - name: Run lint
         run: npm run lint
@@ -64,4 +54,4 @@ jobs:
       - name: Start application
         run: npm run start
         env:
-          MONGO_URI: mongodb://mongo:27017/tech-challenge-2
+          MONGO_URI: mongodb://localhost:27017/tech-challenge-2
