--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,6 @@
-name: CI/CD Pipeline
+name: CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
   build:
@@ -35,6 +29,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Wait for MongoDB to be ready
         run: |
           for i in {1..30}; do
@@ -48,20 +48,5 @@ jobs:
           echo "MongoDB did not become ready in time"    
           exit 1
 
-      - name: Print MongoDB logs
-        run: |
-          docker logs $(docker ps -q --filter ancestor=mongo) || true
-
-      - name: Run lint
-        run: npm run lint
-
       - name: Run tests
         run: npm test
-
-      - name: Build project
-        run: npm run build
-
-      - name: Start application
-        run: npm run start
-        env:
-          MONGO_URI: mongodb://mongo:27017/tech-challenge-2
