--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     services:
       mongo:
-        image: mongo:latest
+        image: mongo:5.0
         ports:
           - 27017:27017
         options: >-
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.17.0'
+          node-version: "20.17.0"
 
       - name: Install dependencies
         run: npm install
