--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20.17.0"
+          node-version: '20.17.0'
 
       - name: Install dependencies
         run: npm install
@@ -50,8 +50,3 @@ jobs:
 
       - name: Build project
         run: npm run build
-
-      - name: Start application
-        run: npm run start
-        env:
-          MONGO_URI: mongodb://localhost:27017/tech-challenge-2
