--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "4.19.2",
     "mongodb": "6.8.0",
     "mongoose": "8.5.3",
-    "nodemon": "3.1.4"
+    "nodemon": "3.1.4",
+    "zod": "3.23.8"
   }
 }
