--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "build": "npx tsc",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=development jest",
     "start": "node dist/server.js",
     "dev": "nodemon server.ts",
     "format": "prettier --write \"src/**/*.{js,ts,tsx}\"",
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "8.8.0",
     "@typescript-eslint/parser": "8.8.0",
     "babel-jest": "29.7.0",
+    "cross-env": "7.0.3",
     "eslint": "9.9.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
