--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,14 +43,18 @@ jobs:
 
       - name: Wait for MongoDB to be ready
         run: |
-          run: |
           until nc -z localhost 27017; do  # Check if MongoDB port is open
             echo "Waiting for MongoDB...";  # Waiting message
             sleep 5;  # Wait for 5 seconds before checking again
           done
 
+      - name: Clean MongoDB database
+        run: |
+          mongo --eval "db.getSiblingDB('test').dropDatabase()"
+
       - name: Run lint
-        run: npm run lint -- --debug &
+        run: |
+          npm run lint -- --debug &
           LINT_PID=$!
           sleep 120
           kill $LINT_PID || echo "Linting process completed or was killed after timeout"
