--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/express": "4.17.21",
     "@types/jest": "29.5.13",
     "@types/supertest": "6.0.2",
+    "@types/swagger-jsdoc": "6.0.4",
+    "@types/swagger-ui-express": "4.1.6",
     "@typescript-eslint/eslint-plugin": "8.8.0",
     "@typescript-eslint/parser": "8.8.0",
     "babel-jest": "29.7.0",
@@ -44,6 +46,8 @@
     "mongodb": "6.8.0",
     "mongoose": "8.5.3",
     "nodemon": "3.1.4",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "5.0.1",
     "zod": "3.23.8"
   }
 }
