--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/server.js",
     "dev": "nodemon server.ts",
     "format": "prettier --write \"src/**/*.{js,ts,tsx}\"",
-    "lint": "eslint \"src/**/*.{js,ts,tsx}\""
+    "lint": "eslint \"src/**/*.{js,ts,tsx}\"",
+    "vercel-build": "npm run build"
   },
   "author": "Grupo 01",
   "license": "ISC",
@@ -24,30 +25,20 @@
     "@types/swagger-jsdoc": "6.0.4",
     "@types/swagger-ui-express": "4.1.6",
     "@typescript-eslint/eslint-plugin": "8.8.0",
-    "@typescript-eslint/parser": "8.8.0",
-    "babel-jest": "29.7.0",
     "cross-env": "7.0.3",
-    "eslint": "9.9.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.2.1",
-    "globals": "15.9.0",
-    "jest": "29.7.0",
-    "prettier": "3.3.3",
-    "supertest": "7.0.0",
-    "ts-jest": "29.2.5",
-    "ts-node-dev": "2.0.0",
-    "typescript": "5.5.4",
-    "typescript-eslint": "8.2.0"
+    "jest": "29.5.0",
+    "nodemon": "2.0.22",
+    "prettier": "2.8.8",
+    "supertest": "6.3.3",
+    "ts-jest": "29.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "cors": "2.8.5",
-    "dotenv": "16.4.5",
-    "express": "4.19.2",
-    "mongodb": "6.8.0",
-    "mongoose": "8.5.3",
-    "nodemon": "3.1.4",
-    "swagger-jsdoc": "6.2.8",
-    "swagger-ui-express": "5.0.1",
-    "zod": "3.23.8"
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "mongoose": "7.3.1",
+    "zod": "3.21.4"
   }
 }
