--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.ts",
+      "src": "src/server.ts",
       "use": "@vercel/node",
       "config": {
         "includeFiles": ["src/**/*"]
@@ -11,8 +11,16 @@
   ],
   "routes": [
     {
+      "src": "/swagger.json",
+      "dest": "/src/swagger/swagger.json"
+    },
+    {
+      "src": "/api-docs",
+      "dest": "src/server.ts"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/dist/server.js"
+      "dest": "src/server.ts"
     }
   ]
 }
