--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI # Name of the continuous integration workflow
 on:
   push:
     branches:
-      - '*'
+      - 'develop'
   pull_request:
     branches:
-      - '*'
+      - 'develop'
 
 jobs:
   build:
